# whisper-asr-worker

./: .dockerignore  .env  .flake8  .gitignore  Dockerfile  LICENSE  README.md  api.py  asr.py  base_util.py  config.py  daan_transcript.py  docker-compose.yml  docker-entrypoint.sh  download.py  gpu_measure.py  io_util.py  main.py  main_data_processor.py  model_download.py  models.py  output.json  pyproject.toml  python-docker-entrypoint.sh  python.Dockerfile  s3_util.py  server.py  simple_asr.py  transcode.py  transcript.py  whisper.py  whisper_api.py  worker.py
.github/: dependabot.yml
.github/workflows/: _deploy.yml  _test.yml  build-push-image.yml  check-project.yml  main-branch.yml  main.yml  manual-build-push-ghcr.yml  manual-build-push-image.yml  manual-deploy.yml  not-main-branch.yml  not-main.yml
apis/: __init__.py  whisper_api.py
app/: __init__.py
config/: config.yml
data/output/kaldi-nl-test/: daan-es-transcript.json  whisper-transcript.json
data/output/testsource__testcarrier/: daan-es-transcript.json  testsource__testcarrier_provenance.json  whisper-transcript.json
data/output/whisper-test/: daan-es-transcript.json  whisper-transcript.json
models/: README.md
scripts/: check-project.sh  daan-program-ids.txt  intial-test-program-ids.txt  run-api.sh  run.sh  transcribe-daan-carriers.sh  transcript-example.json
src/: base_util.py  io_util.py  main_data_processor.py  models.py  whisper.py
src/app/: api.py
src/service/: __init__.py  api.py  health_check.py  rest_api.py
tests/: .env  test_model_download.py  test_s3_util.py
tests/integration/: S3_integration_test.py
tests/unit/: output_formatting_setup.py  output_formatting_test.py
unittest_data/: assert_1segment.json  assert_1word.json  assert_multisegments.json  input.json  input_1word.json  input_multisegments.json
