[tool.poetry]
name = "whisper-asr-worker"
version = "1.0.0"
description = "Whisper speech-to-text worker"
authors = ["Dragos Alexandru Balan <d.a.balan@utwente.nl>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
faster-whisper = "^1.1.1"
validators = "^0.35.0"
boto3 = "^1.40.24"
fastapi = "^0.120.0"
uvicorn = "^0.34.2"
py3nvml = "^0.2.7"

[tool.poetry.group.dev.dependencies]
moto = "^5.1.11"
types-requests = "^2.32.4.20250809"
mypy = "^1.17.1"
flake8 = "^7.3.0"
black = "^25.1.0"
pytest = "^8.4.2"
pytest-cov = "^6.1.1"
pytest-mock = "^3.14.0"

[tool.poetry.group.service]
optional = true

[tool.poetry.group.service.dependencies]
flask = "^3.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
  "tests/",
]
addopts = [
  "--cov",
  "--ignore=tests/ignored",
]

[tool.coverage.run]
omit = [
  "tests/*"
]

[tool.black]
line-length = 88
target_version = ['py311']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | build
    | dist
    | \.venv
    | misc
  )/
)
'''

[tool.mypy]
python_version = "3.11"
exclude = "misc"

[[tool.mypy.overrides]]
module = [
  'yaml',
  'faster_whisper.*',
  'boto3.*',
  'py3nvml.*'
]
ignore_missing_imports = true
